--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.mongodb:mongodb-driver:3.8.2")
 	compile('org.springframework.boot:spring-boot-starter:2.1.2.RELEASE')
-    compile('org.springframework.boot:spring-boot-starter-data-mongodb:2.1.2.RELEASE')
+ //   compile('org.springframework.boot:spring-boot-starter-data-mongodb:2.1.2.RELEASE')
+    compile('org.springframework.data:spring-data-mongodb:2.1.4.RELEASE')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
