--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,5 +6,6 @@ logging:
   level:
     root: ERROR
     com.mongodb.client.model: INFO
+    mongo.examples: DEBUG
     mongo.spring: DEBUG
     org.springframework.data.mongodb.core: DEBUG
